# deep-index-board

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  agent.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
docs/screenshots/: README.md
scripts/: release.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  dbm.rs  lib.rs  main.rs  schema.sql  setup.rs  task_manager.rs  tray.rs  utils.rs
src-tauri/src/inference/: coreml.rs  manager.rs  mod.rs  onnx_runtime.rs  traits.rs  utils.rs
src-tauri/src/platform/: macos.rs  mod.rs  other.rs  windows.rs
src-tauri/src/tasks/: background_worker.rs  clip.rs  file_extract.rs  mod.rs  ocr_macos.rs  ocr_windows.rs  translate.rs
src/components/: HistoryList.tsx  PreviewArea.tsx  StatusBar.tsx
src/components/ImageLab/: ImageLab.tsx
src/components/ImageLab/tools/: OcrTool.tsx  WatermarkTool.tsx
