[package]
name = "deep-index-board"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deep_index_board_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sqlite-vec = "0.1.7-alpha.2"
arboard = "3.4.1"
image = "0.25.9"
uuid = { version = "1.19.0", features = ["v4"] }
sha2 = "0.10.9"
hex = "0.4.3"
sysinfo = "0.33.1"
threadpool = "1.8.1"
log = "0.4"
env_logger = "0.11"
tauri-plugin-autostart = "2.0.0-rc"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

[features]
openvino = []

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25.0"
core-foundation = "0.10.1"
objc2 = "0.5.2"
objc2-foundation = "0.2.2"
objc2-app-kit = { version = "0.2.2", features = [
    "NSWindow",
    "NSButton",
    "NSView",
    "NSControl",
    "NSResponder",
    "NSPasteboard",
    "NSWorkspace",
    "NSRunningApplication",
] }
objc2-vision = { version = "0.2.2", features = ["all"] }
objc2-core-ml = { version = "0.2.2", features = ["all"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "download-binaries",
    "copy-dylibs",
    "load-dynamic",
    "tls-native",
    "api-24",
] }
